--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,13 @@ regex = "1.10"
 clap = { version = "4.4", features = ["derive"] }
 chrono = "0.4"
 dialoguer = "0.11.0"
-keyring = "2.3.2"
+keyring = { version = "3.6.1", features = [
+    "apple-native",
+    "sync-secret-service",
+    "crypto-rust",
+    "vendored",
+] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+indicatif = "0.17.7"
+once_cell = "1.19.0"
